<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="hour_screen"
        android:title="@string/hour"/>
    <PreferenceScreen
        android:key="dawn_screen"
        android:title="@string/dawn"/>
    <PreferenceScreen
        android:key="tallis_screen"
        android:title="@string/tallis"/>
    <PreferenceScreen
        android:key="sunrise_screen"
        android:title="@string/sunrise"/>
    <PreferenceScreen
        android:key="shema_screen"
        android:title="@string/shema"/>
    <PreferenceScreen
        android:key="prayers_screen"
        android:title="@string/prayers"/>
    <PreferenceScreen
        android:key="midday_screen"
        android:title="@string/midday"/>
    <PreferenceScreen
        android:key="earliest_mincha_screen"
        android:title="@string/earliest_mincha"/>
    <PreferenceScreen
        android:key="mincha_screen"
        android:title="@string/mincha"/>
    <PreferenceScreen
        android:key="plug_hamincha_screen"
        android:title="@string/plug_hamincha"/>
    <PreferenceScreen
        android:key="candles_screen"
        android:title="@string/candles"/>
    <PreferenceScreen
        android:key="sunset_screen"
        android:title="@string/sunset"/>
    <PreferenceScreen
        android:key="twilight_screen"
        android:title="@string/twilight"/>
    <PreferenceScreen
        android:key="nightfall_screen"
        android:title="@string/nightfall"/>
    <PreferenceScreen
        android:key="shabbath_screen"
        android:title="@string/shabbath_ends"/>
    <PreferenceScreen
        android:key="midnight_screen"
        android:title="@string/midnight"/>
    <PreferenceScreen
        android:key="levana_earliest_screen"
        android:title="@string/levana_earliest"/>
    <PreferenceScreen
        android:key="levana_latest_screen"
        android:title="@string/levana_latest"/>
    <PreferenceScreen
        android:key="burn_chametz_screen"
        android:title="@string/burn_chametz"/>

    <ListPreference
        android:defaultValue="@string/omer_defaultValue"
        android:entries="@array/omer_entries"
        android:entryValues="@array/omer_values"
        android:key="omer"
        android:title="@string/omer"/>

</PreferenceScreen>