<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/opinion">
        <com.github.preference.NumberPickerPreference
            android:defaultValue="@integer/candles_defaultValue"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:icon="@drawable/ic_settings_opinion"
            android:key="@string/opinion_name_candles"
            android:max="60"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/ok"
            android:title="@string/opinion"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="@string/candles_chanukka_defaultValue"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:entries="@array/candles_chanukka_entries"
            android:entryValues="@array/candles_chanukka_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="@string/opinion_name_candles_chanukka"
            android:title="@string/candles_chanukka_opinion"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reminder">
        <com.github.times.preference.ZmanReminderPreference
            android:defaultValue="@integer/reminder_defaultValue"
            android:dialogIcon="@drawable/ic_settings_alarm"
            android:icon="@drawable/ic_settings_alarm"
            android:key="candles.reminder"
            android:title="@string/reminder"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_1_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.1"
            android:title="@string/reminder_sunday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_2_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.2"
            android:title="@string/reminder_monday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_3_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.3"
            android:title="@string/reminder_tuesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_4_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.4"
            android:title="@string/reminder_wednesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_5_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.5"
            android:title="@string/reminder_thursday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_6_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.6"
            android:title="@string/reminder_friday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_7_defaultValue"
            android:dependency="candles.reminder"
            android:key="candles.reminder.day.7"
            android:title="@string/reminder_saturday" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_appearance_title">
        <SwitchPreference
            android:defaultValue="@bool/animate_defaultValue"
            android:icon="@drawable/ic_settings_anim"
            android:key="candles.anim"
            android:title="@string/animations" />
        <SwitchPreference
            android:defaultValue="@bool/emphasis_defaultValue"
            android:key="candles.emphasis"
            android:title="@string/emphasis_title" />
    </PreferenceCategory>

</PreferenceScreen>