<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory android:title="@string/opinion">
        <ListPreference
            android:defaultValue="@string/fast_ends_after_defaultValue"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:entries="@array/fast_ends_after_entries"
            android:entryValues="@array/fast_ends_after_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="fast_ends.after"
            android:title="@string/opinion"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="@string/fast_ends_sunset_defaultValue"
            android:dependency="fast_ends.after"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:enabled="false"
            android:entries="@array/sunset_entries"
            android:entryValues="@array/sunset_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="fast_ends.sunset"
            android:title="@string/sunset"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="@string/fast_ends_twilight_defaultValue"
            android:dependency="fast_ends.after"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:enabled="false"
            android:entries="@array/twilight_entries"
            android:entryValues="@array/twilight_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="fast_ends.twilight"
            android:title="@string/twilight"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="@string/fast_ends_nightfall_defaultValue"
            android:dependency="fast_ends.after"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:enabled="false"
            android:entries="@array/nightfall_entries"
            android:entryValues="@array/nightfall_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="fast_ends.nightfall"
            android:title="@string/nightfall"
            app:useSimpleSummaryProvider="true" />
        <com.github.preference.NumberPickerPreference
            android:defaultValue="@integer/fast_ends_defaultValue"
            android:dependency="fast_ends.after"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:icon="@drawable/ic_settings_opinion"
            android:key="fast_ends.minutes"
            android:max="120"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/ok"
            android:title="@string/opinion"
            app:useSimpleSummaryProvider="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reminder">
        <com.github.times.preference.ZmanReminderPreference
            android:defaultValue="@integer/reminder_defaultValue"
            android:dialogIcon="@drawable/ic_settings_alarm"
            android:icon="@drawable/ic_settings_alarm"
            android:key="fast_ends.reminder"
            android:title="@string/reminder"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_1_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.1"
            android:title="@string/reminder_sunday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_2_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.2"
            android:title="@string/reminder_monday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_3_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.3"
            android:title="@string/reminder_tuesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_4_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.4"
            android:title="@string/reminder_wednesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_5_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.5"
            android:title="@string/reminder_thursday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_6_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.6"
            android:title="@string/reminder_friday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_7_defaultValue"
            android:dependency="fast_ends.reminder"
            android:key="fast_ends.reminder.day.7"
            android:title="@string/reminder_saturday" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_appearance_title">
        <SwitchPreference
            android:defaultValue="@bool/emphasis_defaultValue"
            android:key="fast_ends.emphasis"
            android:title="@string/emphasis_title" />
    </PreferenceCategory>

</PreferenceScreen>