<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_compass"
        android:icon="@drawable/ic_menu_compass"
        android:orderInCategory="100"
        android:title="@string/menu_compass"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_location"
        android:icon="@drawable/ic_menu_locations"
        android:orderInCategory="150"
        android:title="@string/menu_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_date"
        android:icon="@drawable/ic_menu_day"
        android:orderInCategory="200"
        android:title="@string/menu_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_today"
        android:icon="@drawable/ic_menu_today"
        android:orderInCategory="250"
        android:title="@string/menu_today"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_settings"
        android:orderInCategory="900"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

</menu>